scripts/nullaway/annotator/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8.txt
../annotator/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8/src/compilatore/CTarget.java:498: error: [NullAway] unboxing of a @Nullable value
		int dimensione = mappaDimensioneVettori.get(nome);
		                                           ^
    (see http://t.uber.com/nullaway )
../annotator/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8/src/compilatore/JasminTarget.java:599: error: [NullAway] dereferenced expression parametriFunzioni.get(nome) is @Nullable
		if (parametriFunzioni.get(nome).endsWith("V")) {
		                               ^
    (see http://t.uber.com/nullaway )
../annotator/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8/src/compilatore/JasminTarget.java:622: error: [NullAway] unboxing of a @Nullable value
		costante(dimensioneVettori.get(nome));
		                              ^
    (see http://t.uber.com/nullaway )
../annotator/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8/src/compilatore/JasminTarget.java:622: error: [NullAway] passing @Nullable parameter 'dimensioneVettori.get(nome)' where @NonNull is required
		costante(dimensioneVettori.get(nome));
		                              ^
    (see http://t.uber.com/nullaway )
../annotator/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8/src/compilatore/JasminTarget.java:632: error: [NullAway] dereferenced expression parametriFunzioni.get(nome) is @Nullable
		if (!parametriFunzioni.get(nome).endsWith("V")) {
		                                ^
    (see http://t.uber.com/nullaway )
../annotator/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8/src/compilatore/RubyTarget.java:467: error: [NullAway] unboxing of a @Nullable value
		int dimensione = mappaDimensioneVettori.get(nome);
		                                           ^
    (see http://t.uber.com/nullaway )
6 errors
